fix layer button flickering when pixel slider displaying current pixel size

--- a/public/css/mobile-mainPage.css
+++ b/public/css/mobile-mainPage.css
@@ -5,7 +5,7 @@
     }
 }
 
-@media screen and (max-width: 854px) {
+@media screen and (max-width: 710px) {
     #top-map-buttons {
         max-width: 80%;
     }
